--- a/password-manager/static/html/password-generator.html
+++ b/password-manager/static/html/password-generator.html
@@ -18,7 +18,7 @@
     </div>
     <div style="padding: 5px 0 5px 75px">
         <label for="numCharID">Number of Characters: </label>
-        <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12" required>
+        <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12">
         <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
     </div>
     <label for="output">Output: </label>
