Finished signup page frontend

--- a/password-manager/static/html/password-generator.html
+++ b/password-manager/static/html/password-generator.html
@@ -4,26 +4,30 @@
     <meta charset="UTF-8">
     <title>BoardLock - Generate Password</title>
     <link rel="stylesheet" href="/static/css/password-generator.css">
-    <script src="/static/js/password-gen.js"></script>
+    <script src="/static/js/password-generator.js"></script>
 </head>
 
 <body>
 <div class="wrapper">
-    <header>Generate Secure Random Password</header>
-    <div style="padding:5px 0 5px 6px">
-        <button id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
-        <button id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
-        <button id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
-        <button id="specialID" value="specialVal" onclick="update(this.value)">Special</button>
-    </div>
-    <div style="padding: 5px 0 5px 75px">
-        <label for="numCharID">Number of Characters: </label>
-        <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12">
-        <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
+    <header>Random Password Generator</header>
+    <div class="settings">
+        <div style="padding:5px 0 5px 6px">
+            <button id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
+            <button id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
+            <button id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
+            <button id="specialID" value="specialVal" onclick="update(this.value)">Special</button>
+        </div>
+        <div style="padding: 8px 0 10px 18px">
+            <label for="numCharID">Number of Characters: </label>
+            <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12">
+            <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
+            <button style="padding: 10px 20px;" onclick="fill()">Fill Password Field</button>
+        </div>
     </div>
     <label for="output">Output: </label>
-    <input type="text" id="output" style="width: 428px">
-    <p id="error"></p>
+    <input type="password" id="output" style="width: 405px">
+    <button id="show-random" class="show-random" onclick="show(document.getElementById('output'), this)">Show</button>
+    <p id="error" style="text-align: center"></p>
 </div>
 </body>
 </html>
