Password validation finished

--- a/password-manager/static/html/password-generator.html
+++ b/password-manager/static/html/password-generator.html
@@ -21,12 +21,12 @@
             <label for="numCharID">Number of Characters: </label>
             <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12">
             <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
-            <button style="padding: 10px 20px;" onclick="fill()">Fill Password Field</button>
+            <button style="padding: 10px 20px;" onclick="fill_password_field()">Fill Password Field</button>
         </div>
     </div>
     <label for="output">Output: </label>
     <input type="password" id="output" style="width: 405px">
-    <button id="show-random" class="show-random" onclick="show(document.getElementById('output'), this)">Show</button>
+    <button id="show-random" class="show-random" onclick="show_password(document.getElementById('output'), this)">Show</button>
     <p id="error" style="text-align: center"></p>
 </div>
 </body>
