--- a/password-manager/static/html/password-generator.html
+++ b/password-manager/static/html/password-generator.html
@@ -11,13 +11,13 @@
 <div class="wrapper">
     <header>Random Password Generator</header>
     <div class="settings">
-        <div style="padding:5px 0 5px 6px">
+        <div style="padding:5px 0 5px 0px">
             <button id="lowercaseID" value="lowercaseVal" onclick="update(this.value)">Lowercase</button>
             <button id="uppercaseID" value="uppercaseVal" onclick="update(this.value)">Uppercase</button>
             <button id="numbersID" value="numbersVal" onclick="update(this.value)">Numbers</button>
             <button id="specialID" value="specialVal" onclick="update(this.value)">Special</button>
         </div>
-        <div style="padding: 8px 0 10px 18px">
+        <div style="padding: 8px 0 10px 0px">
             <label for="numCharID">Number of Characters:</label>
             <input type="text" id="numCharID" style="width: 30px; text-align: center" value="12">
             <button id="btn" style="margin-left: 10px" class="generate" onclick="generate()" onsubmit="generate()">Generate!</button>
@@ -25,7 +25,7 @@
         </div>
     </div>
     <label for="output">Output:</label>
-    <input type="password" id="output" style="width: 405px">
+    <input type="password" id="output" style="width: 70%">
     <button id="show-random" class="show-random" onclick="show_password(document.getElementById('output'), this)">Show</button>
     <p id="error" style="text-align: center"></p>
 </div>
