--- a/password-manager/static/html/password-generator.html
+++ b/password-manager/static/html/password-generator.html
@@ -27,7 +27,7 @@
     <label for="output">Output:</label>
     <input type="password" id="output" style="width: 70%">
     <button id="show-random" class="show-random" onclick="show_password(document.getElementById('output'), this)">Show</button>
-    <p id="error" style="text-align: center"></p>
+    <p id="error" style="text-align: center; color: white"></p>
 </div>
 </body>
 </html>
